# img_cropping_program

./: CMakeLists.txt  README.md  chromakey_compositing.py  cutting.py  package.xml  restructure.py
bash/: reset-img-output.bash
scripts/: __init__.py  chromakey_compositing.py  mask_generator.py
scripts/nouse/: chromakey_compositing.py
